# opencl_util

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  android.toolchain.cmake  descriptor.json
include/: opencl_util.h
src/: oclinf.c  opencl_util.c
